--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Author: Harshit Dwivedi
 <!DOCTYPE html>
 <html>
 <head>
-<title>Webpage for app generator by FOSSAsia</title>
+<title>Android Event App Generator by FOSSASIA</title>
 <!-- for-mobile-apps -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -19,7 +19,7 @@ Author: Harshit Dwivedi
 </head>
 <body>
 <div class="content">
-		<h1>Webpage for app generator</h1>
+		<h1>Android Event App Generator</h1>
 		<div class="main">
 			<form class="contact-forms">
 				<!-- end /.header-->
