Comment out redundant code

--- a/apk-generator/index.html
+++ b/apk-generator/index.html
@@ -77,6 +77,6 @@ height="200px">
       for (var a = 0; a < ary.length; a++) obj[ary[a].name] = ary[a].value;
       console.log("JSON",obj);
       return obj;
-      localStorage.setItem("json", obj);
+      // localStorage.setItem("json", obj);
     });
 </script>
