Add script to initiate download once apk has been compiled

--- a/apk-generator/index.html
+++ b/apk-generator/index.html
@@ -97,6 +97,7 @@ height="200px">
         success: function(response){
           console.log("Success",response);
           alert(response);
+          window.location = response;
 	}
       });
       });
