--- a/apk-generator/index.html
+++ b/apk-generator/index.html
@@ -1,68 +1,48 @@
+
+
 <form name="htmlform" id="form" enctype="multipart/form-data">
   <p align="center"><b><big>FOSSASIA's App Generator</big></b></p>
-<table align="center"
-width = "900px"
-height="200px">
-<tr>
- <td valign="top">
-  <label for="Email">Email</label>
- </td>
- <td valign="top">
-  <input id="email" type="email" name="Email"  size="30">
- </td>
+  <table align="center"
+  width = "900px"
+  height="200px">
+  <tr>
+   <td valign="top">
+    <label for="Email">Email</label>
+  </td>
+  <td valign="top">
+    <input id="email" type="email" name="Email"  size="30">
+  </td>
+  <td>
 
- <td>
-  <label for="name">App's Name</label>
- </td>&nbsp;
- <td valign="top">
-  <input id="appName" type="text" name="App_Name" maxlength="50" size="30">
- </td>
+   <td valign="top">
+    <label for="name">App's Name</label>
+  </td>&nbsp;
+  <td valign="top">
+    <input id="appName" type="text" name="App_Name" maxlength="50" size="30">
+  </td>&nbsp;
 
 </tr>
 <tr>
  <td valign="top">
   <label for="link">Api Link</label>
- </td>
- <td valign="top">
-  <input id="apiLink" type="url" name="Api_Link" maxlength="90" size="30">
- </td>
-</tr>
-<tr>
- <td valign="top">
-  <label for="speaker">Json for Speakers</label>
- </td>
- <td valign="top">
-    <input  type="file" name="speaker" maxlength="30" size="30">
- </td>
- </tr>
- <tr>
+</td>
 <td valign="top">
-  <label for="sessions">Json for Sessions</label>
- </td>
- <td valign="top">
-    <input  type="file" name="sessions" maxlength="30" size="30">
- </td>
+  <input id="apiLink" type="url" name="Api_Link" maxlength="90" size="30">
+</td>
 </tr>
+
 <tr>
- <td valign="top">
-  <label for="tracks">Json for tracks</label>
- </td>
- <td valign="top">
-    <input  type="file" name="speaker" maxlength="30" size="30">
- </td>
- </tr>
- <tr>
   <td valign="top">
-  <label for="speaker">Json for locations</label>
- </td>
- <td valign="top">
-    <input  type="file" name="location" maxlength="30" size="30">
- </td>
- </tr>
+    <label for="sessions">Zip containing .json files</label>
+  </td>
+  <td valign="top">
+    <input accept=".zip" type="file" id="uploadZip" name="sessions">
+  </td>
+</tr>
 <tr>
  <td colspan="5" style="text-align:center">
   <button type="submit">Generate and Download app</button>
- </td>
+</td>
 </tr>
 </table>
 </form>
@@ -70,35 +50,66 @@ height="200px">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <script>
-    var $ = jQuery;
-    var timestamp = Number(new Date());
-    var form = document.querySelector("form");
-    var config = {
-      apiKey: "API_KEY",
-      authDomain: "app-name.firebaseapp.com",
-      databaseURL: "https://app-name.firebaseio.com",
-      storageBucket: "app-name.appspot.com",
-    };
-    firebase.initializeApp(config);
-    var database = firebase.database();
-    form.addEventListener("submit", function(event) {
-      event.preventDefault();
-      var ary = $(form).serializeArray();
-      var obj = {};
-      for (var a = 0; a < ary.length; a++) obj[ary[a].name] = ary[a].value;
-      console.log("JSON",obj);
-      firebase.database().ref('users/' + timestamp).set(obj);
-      database.ref('users/' + timestamp).once('value').then(function(snapshot) {
-      console.log("Received value",snapshot.val());
-      $.ajax({
-        type: "POST",
-	url: "/runPy.php",
-	data: { timestamp : timestamp },
-        success: function(response){
-          console.log("Success",response);
-          window.location = response;
-	}
+  var $ = jQuery;
+  var timestamp = Number(new Date());
+  var form = document.querySelector("form");
+  var config = {
+    apiKey: "API_KEY",
+    authDomain: "app-id.firebaseapp.com",
+    databaseURL: "https://app-id.firebaseio.com",
+    storageBucket: "app-id.appspot.com",
+  };
+  firebase.initializeApp(config);
+      // var userId = 1;
+      var database = firebase.database();
+      form.addEventListener("submit", function(event) {
+        event.preventDefault();
+        var ary = $(form).serializeArray();
+        var obj = {};
+        for (var a = 0; a < ary.length; a++) obj[ary[a].name] = ary[a].value;
+          console.log("JSON",obj);
+        var file_data = $('#uploadZip').prop('files')[0];       
+        var form_data = new FormData();                  
+        form_data.append('file', file_data);                           
+        firebase.database().ref('users/' + timestamp).set(obj);
+        database.ref('users/' + timestamp).once('value').then(function(snapshot) {
+          console.log("Received value",snapshot.val());
+          alert("Please wait while we generate the app, meanwhile you can stick around to directly download it.The app will also be emailed to you."); 
+          $.ajax({
+            
+                  url: '/upload.php', // point to server-side PHP script
+                  cache: false,
+                  contentType: false,
+                  processData: false,
+                  data: form_data,                         
+                  type: 'post',
+                  success: function(php_script_response){
+                    ajaxCall1();
+                  }
+                });
+          function ajaxCall1() {
+            $.ajax({
+              type: "POST",
+              url: "/uploadHelper.php",
+              data: { timestamp : timestamp },
+              success: function(response){
+                ajaxCall2();
+              }
+            });
+          }
+          function ajaxCall2(){      
+            $.ajax({
+              type: "POST",
+              url: "/runPy.php",
+              data: { timestamp : timestamp },
+              success: function(response){
+                console.log("Success",response);
+                window.location = response;
+              }
+            });
+          }
+        });
       });
-      });
-      });
-</script>
+    </script>
+
+
